# CHLOE

./: .gitignore  CMakeLists.txt  LISENCE  README.md
benchmarks/: data_analysis.c  data_analysis.mlir  data_analysis_1_branch.mlir  data_analysis_2_arith2heir.mlir  data_analysis_3_memref2heir.mlir  data_analysis_4_func2heir.mlir  data_analysis_5_splitloop.mlir  data_analysis_6_batchloop.mlir  data_analysis_7_heir2emitc.mlir  data_analysis_emitc.mlir  data_analysis_output.cpp
include/heir/IR/FHE/: HEIR.td
include/heir/Passes/loopbatch/: BatchLoop.h
include/heir/Passes/loopsplit/: SplitLoop.h
src/IR/FHE/: HEIRDialect.cpp
src/Passes/: CMakeLists.txt
src/Passes/arith2heir/: LowerArithToHEIR.cpp
src/Passes/branch/: Branch.cpp
src/Passes/func2heir/: FuncToHEIR.cpp
src/Passes/heir2emitc/: LowerHEIRToEmitC.cpp
src/Passes/loopbatch/: BatchLoop.cpp  CMakeLists.txt
src/Passes/loopsplit/: CMakeLists.txt  SplitLoop.cpp  SplitLoop.td
src/Passes/memref2heir/: LowerMemrefToHEIR.cpp
src/Passes/unroll/: UnrollLoop.cpp
src/tools/: CMakeLists.txt
src/tools/chloe_opt/: CMakeLists.txt
src/tools/heir_opt/: CMakeLists.txt  chloe-opt.cpp
